# flatmap-knowledge

./: .gitignore  README.rst  pyproject.toml  release.sh
flatmapknowledge/: __init__.py
