[project]
name = "flatmapknowledge"
version = "2.5.2"
description = ""
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"},
]
requires-python = "==3.12.*"
dependencies = [
    "mapknowledge @ https://github.com/AnatomicMaps/map-knowledge/releases/download/v1.3.2/mapknowledge-1.3.2-py3-none-any.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
